Fix #113 (Use gradle wrapper)